--- a/PROGRAMACION LETICIA/CosasEclipse/Pruebas1/.project
+++ b/PROGRAMACION LETICIA/CosasEclipse/Pruebas1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Pruebas1</name>
+	<name>pruebas1</name>
 	<comment></comment>
 	<projects>
 	</projects>
