--- a/PROGRAMACION LETICIA/BuscaminasNachoOficial/pom.xml
+++ b/PROGRAMACION LETICIA/BuscaminasNachoOficial/pom.xml
@@ -10,11 +10,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.kwhat</groupId>
+            <groupId>com.1stleg</groupId>
             <artifactId>jnativehook</artifactId>
-            <version>2.2.2</version>
+            <version>2.1.0</version>
         </dependency>
     </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
