--- a/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/EJER2/.project
+++ b/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/EJER2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UD03Ex02</name>
+	<name>UD3_EJER2</name>
 	<comment></comment>
 	<projects>
 	</projects>
