--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /NETBEANS/CelsiusConverterProject/nbproject/private/
 /NETBEANS/CelsiusConverterProject/build/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/TablaPersonas/com.discoduroroer.TablaPersonas/target/
