--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /NETBEANS/CelsiusConverterProject/nbproject/private/
 /NETBEANS/CelsiusConverterProject/build/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/TablaPersonas/com.discoduroroer.TablaPersonas/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer6/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer1/target/
