--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer2911/ejer2/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer2911/ejer3/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/antes de javafx/p3casa/target/
+/PROFENACHO/SANTANAREPASO/prueba1/target/
+/PROFENACHO/SANTANAREPASO/Sumas/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer2911/ejer4/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/ejer2911/ejer5/ejer4/target/
