--- a/PROFENACHO/SANTANAREPASO/Sumas/pom.xml
+++ b/PROFENACHO/SANTANAREPASO/Sumas/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ch.makery.addres</groupId>
-    <artifactId>ejer2</artifactId>
+    <groupId>es.dam</groupId>
+    <artifactId>Sumas</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>ch.makery.address.MainApp</mainClass>
+                    <mainClass>es.dam.sumas.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
