--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/TEMA 2 /UD6PPejer3/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/TEMA 2 /UD6PPejer4/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/javaHelpEjemplo/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/UD08_Ex01_IgnacioToledanoCaneo/target/
