--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/TEMA 2 /UD6PPejer4/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/javaHelpEjemplo/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/UD08_Ex01_IgnacioToledanoCaneo/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/UD8_Nacho/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVADOC/UD8_PE_IgnacioToledanoCaneo/target/
