--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVAFX/UD08_Ex01_IgnacioToledanoCaneo/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/javahelp/UD8_Nacho/target/
 /DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JAVADOC/UD8_PE_IgnacioToledanoCaneo/target/
+/DAM2/PROGRAMCIO/JAVA/Desarrollo de Interfaces/JASPERREOPORT/InformesJasperJavaFX/target/
